Sprint da semana 3

--- a/nakisbazar/src/COMPONENTS/Banners/BannerSlider.css
+++ b/nakisbazar/src/COMPONENTS/Banners/BannerSlider.css
@@ -64,6 +64,6 @@
 }
 
 .bannerslider .imagecont button:hover{
-    background-color: var(--col1);
+    background-color: #f7b9da;
     color: white;
 }
