--- a/nakisbazar/src/COMPONENTS/Category/HomeCategories.css
+++ b/nakisbazar/src/COMPONENTS/Category/HomeCategories.css
@@ -8,7 +8,7 @@
 
 .homecategories .container{
     width: 300px;
-    height: 300px;
+    height: 170px;
     overflow: hidden;
     display: flex;
     flex-wrap: wrap;
@@ -44,21 +44,25 @@
 }
 
 .homecategories .container:nth-child(1){
-    background: #ff4757;
+    background: #8f8a9a;
     color: rgb(0, 0, 0);
+    border: 1px solid #b9a4f4;
 }
 
 .homecategories .container:nth-child(2){
-    background: #ff4757;
+    background: #8f8a9a;
     color: rgb(0, 0, 0);
+    border: 1px solid #b9a4f4;
 }
 
 .homecategories .container:nth-child(3){
-    background: #ff4757;
+    background: #8f8a9a;
     color: rgb(0, 0, 0);
+    border: 1px solid #b9a4f4;
 }
 
 .homecategories .container:nth-child(4){
-    background: #ff4757;
+    background: #8f8a9a;
     color: rgb(0, 0, 0);
+    border: 1px solid #b9a4f4;
 }
