--- a/nakisbazar/src/COMPONENTS/Product/ProductCard.css
+++ b/nakisbazar/src/COMPONENTS/Product/ProductCard.css
@@ -8,7 +8,7 @@
     margin: 10px;
     position: relative;
     border-radius: 5px;
-    background-color: #8f8a9a;
+    background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
