--- a/src/COMPONENTS/Category/HomeCategories.css
+++ b/src/COMPONENTS/Category/HomeCategories.css
@@ -44,25 +44,25 @@
 }
 
 .homecategories .container:nth-child(1){
-    background: #c2a0b9;
+    background: #8E6D99;
     color: rgb(0, 0, 0);
     border: 1px solid #b9a4f4;
 }
 
 .homecategories .container:nth-child(2){
-    background: #c2a0b9;
+    background: #8E6D99;
     color: rgb(0, 0, 0);
     border: 1px solid #b9a4f4;
 }
 
 .homecategories .container:nth-child(3){
-    background: #c2a0b9;
+    background: #8E6D99;
     color: rgb(0, 0, 0);
     border: 1px solid #b9a4f4;
 }
 
 .homecategories .container:nth-child(4){
-    background: #c2a0b9;
+    background: #8E6D99;
     color: rgb(0, 0, 0);
     border: 1px solid #b9a4f4;
 }
