--- a/src/PAGES/Product/ProductPage.css
+++ b/src/PAGES/Product/ProductPage.css
@@ -245,9 +245,10 @@
 
 .productpage .reviewhead{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     margin: 20px 0px;
+    position: relative;
 }
 
 .productpage .reviewhead p{
@@ -255,6 +256,8 @@
     padding: 0px;
     font-size: 18px;
     color: var(--col1);
+    position: absolute;
+    left: 0px;
 }
 
 .productpage .reviewhead span{
@@ -263,6 +266,7 @@
     padding: 5px 10px;
     border-radius: 20px;
     color: white;
+    margin-left: 10px;
 }
 
 .productpage .reviewbody{
@@ -274,5 +278,66 @@
     max-width: 900px;
     align-self: center;
 }
+
+.productpage .rating{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0px;
+}
+
+.productpage .rating .starinactive{
+    color: lightgray;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.productpage .rating .starinactive:hover{
+    color: var(--col1);
+}
+
+.productpage .rating .staractive{
+    color: goldenrod;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    fill: goldenrod;
+}
+
+/* */
+
+.productpage .rating1{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0px;
+}
+
+.productpage .rating1 .starinactive{
+    color: lightgray;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.productpage .rating1 .starinactive:hover{
+    color: var(--col1);
+}
+
+.productpage .rating1 .staractive{
+    color: goldenrod;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    fill: goldenrod;
+}
+
+
+
+
+
+
+
 
 
