--- a/src/COMPONENTS/Product/CategorySidebar.css
+++ b/src/COMPONENTS/Product/CategorySidebar.css
@@ -1,34 +1,37 @@
-.categorysidebar .category img{
-    width: 40px;
-    height: 40px;
-}
 
-.categorysidebar{
+.categorysidebar {
     width: 20%;
     display: flex;
     flex-direction: column;
-    /*border: 1px solid #ccc;*/
 }
 
-.categorysidebar .category{
+.category {
     display: flex;
     align-items: center;
     border: 1px solid #e7e7e7;
-    border-radius: 90px;
-    border-style: calc(100% - 20px);
+    border-radius: 8px; /* Reduzi a borda para torná-la menos arredondada */
     padding: 10px 20px;
-    flex-wrap: wrap;
-    gap: 20px;
+    margin-bottom: 10px; /* Adicionei margem inferior para separar as categorias */
+    transition: background-color 0.3s ease; /* Adicionada transição suave de cor ao passar o mouse */
 }
 
-.categorysidebar .category:hover{
+.category:hover {
     background-color: #a18eca;
     cursor: pointer;
 }
 
-.categorysidebar .category h3{
-    /*margin: 0px 20px;*/
-    font-size: 18px;
-    padding: 0px;
+.category img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px; /* Adicionei margem à direita para separar a imagem do texto */
 }
 
+.category h3 {
+    font-size: 18px;
+    margin: 0;
+}
+
+.category-link {
+    text-decoration: none;
+    color: inherit;
+}
